# egocrowd-pipeline

./: .gitattributes  .gitignore  LICENSE  README.md  calibrate_workspace.py  compose_h1_shadow.py  detect_objects.py  detect_objects_fallback.py  egodex_to_oxe.py  hand_tracker_v2.py  modal_retarget.py  mujoco_franka_v9.py  mujoco_g1_v10.py  mujoco_h1_retargeted_render.py  mujoco_h1_shadow_v1.py  mujoco_h1_trajectory_viz.py  pipeline_config.py  pyproject.toml  r3d_ingest.py  reconstruct_wrist_3d.py  reconstruct_wrist_3d_bimanual.py  render_bimanual_sidebyside.py  requirements-dev.txt  retarget_shadow_hand.py  run_pipeline.py  synthetic_data.py  test_pipeline.py  trim_trajectory.py
.planning/: REQUIREMENTS.md  ROADMAP.md  STATE.md
demo/: PIPELINE_WALKTHROUGH.md  index.html
e2e_proof/: MUJOCO_LOG.TXT  build_demo_video.py  pipeline_log.txt  run_pipeline.py  sim_fix.py
egocrowd/: __init__.py  cli.py  detect.py  export.py  hand_pose.py  parse.py  retarget.py
egocrowd.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
mission-control/: index.html  update-dashboard.py  update-heartbeat.py
pipeline/: Dockerfile  egodex_to_lerobot.py  lerobot_to_lingbot.py  requirements.txt
policy/: _v4_eval_v2.xml  lerobot_act_dataset.hdf5  pick_lift_demo.json  pick_place_demo.json  robot_demo.json  robot_demo_ee.json
processing/: hamer_modal.py  hand_pose.py
r3d_viewer/: hand_poses.json  index.html
retargeted/: stack2_shadow_hand.json
schema/: episode.py
test_output/: ep_20260220_142950.json  ep_20260220_142950_lerobot.json  ep_20260220_142950_rlds.json
tools/: calendar-invite.ps1  check_bounces.py  check_pod.py  (+43 more)
(+59 files in other folders)
